--- a/backend/package.json
+++ b/backend/package.json
@@ -25,19 +25,25 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^4.15.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
+    "@types/winston": "^2.4.4",
     "eslint": "^8.40.0",
     "jest": "^30.2.0",
     "nodemon": "^2.0.22",
