--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^4.15.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
@@ -38,6 +40,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^8.40.0",
     "jest": "^30.2.0",
     "nodemon": "^2.0.22",
