조원희 커밋

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/cwh_todolist"
+# Database (use Supabase connection string)
+DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.crhyvdxatyppfcvwbgrz.supabase.co:5432/postgres"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-here"
@@ -8,6 +8,3 @@ JWT_EXPIRES_IN="24h"
 # Server
 PORT=3000
 NODE_ENV=development
-
-# Prisma
-PRISMA_ENDPOINT="http://localhost:5555"
